# graficos

./: .env  .gitignore  ASDF.xlsx  FICHA2026_MARZO_BBDD_CLIMA_MENSUAL.xlsx  PP-m_1990-2020.txt  PP_1990-2020.txt  PP_1990-2021.txt  README.md  TEMPLATE_R.md  TREEMAP.md  claude.md  config.R  main.R  main.py  main_v2.R  metadata.yaml  pyproject.toml
.Rproj.user/24347D16/pcs/: files-pane.pper
.Rproj.user/24347D16/sources/prop/: 792D5162  82745AA7  INDEX
.Rproj.user/24347D16/sources/session-3ca0b32b/: 10B6D826  1348FA8C  49B03E66  612ECECB  612ECECB-contents  AB3A25AC-contents
.Rproj.user/shared/notebooks/: paths
data/: 2026-05-13_RAW_ERA5_LOS_RIOS.xlsx  BBDD_RAW_2026_ERA5_LOS_RIOS.xlsx
output/: _FICHA2026_BBDD_CLIMA_MENSUAL.xlsx
output/CLIMATOL/: PP-m-ori_1990-2020.est  PP-m_1990-2020.est  PP-m_1990-2020.txt  PP-m_1990-2020_out.csv  PP_1990-2020.est  PP_1990-2020.txt  PP_1990-2020_1990-2021.txt  PP_1990-2021.txt  TN-m-ori_1990-2020.est  TN-m_1990-2020.txt  TN-m_1990-2020_out.csv
skills/: PLAN_README.md  readme_skill.py  treemap.py
src/: 00_scratch_test_delete_ignore.R  plt_heatmap.R  plt_mapa.R  plt_qdm_comparacion.R  plt_ts_anomaly.R  qdm_bias_correction.R  qdm_bias_correction_v2.R  utils_calcular_climatologia_anual.R  utils_calcular_mensuales.R  utils_carga_BaseMaps.R  utils_color.R  utils_escribe_climatol.R  utils_extrae_CR2Met.R  utils_getCR2Met.R  utils_lee_CR2Met.R  utils_lee_xls_data.R  utils_pivotdata.R
