[project]
name = "graficos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.9.0",
    "geopandas>=1.1.3",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.10.8",
    "matplotly>=0.1.5",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.39.3",
    "pydantic>=2.13.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
